--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -6,13 +6,13 @@ sortid: 3.0
 submenu: true
 ---
 
-Стационарные страховочные системы от падения с высоты.
-Мы предлагаем установку анкерных линий, разработанных и произведённых компаниями High Safety \(Россия\)
+### Стационарные страховочные системы от падения с высоты.
+` ` Мы предлагаем установку анкерных линий, разработанных и произведённых компаниями **High Safety \(Россия\)**
 
-Наша компания является дилерами компании HIGH SAFETY
+*Наша компания является дилерами компании HIGH SAFETY*
 
 
-Анкерные устройства от компании HIGH SAFETY - производитель средств индивидуальной и коллективной защиты от падения с высоты №1 в России. 
+` ` Анкерные устройства от компании **HIGH SAFETY** - производитель средств индивидуальной и коллективной защиты от падения с высоты **№1 в России.** 
 Вся продукция High Safety производится на территории России, соответствует требованиям Технического регламента Таможенного союза ТР ТС 019/2011, <!--   bufer6.3.0.md  --> имеет сертификаты соответствия ЕАС.
 - гибкие и жесткие горизонтальные анкерные линии 
 - жесткие вертикальные анкерные линии 
