--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -7,9 +7,9 @@ submenu: true
 ---
 
 ### Стационарные страховочные системы от падения с высоты.
-` ` Мы предлагаем установку анкерных линий, разработанных и произведённых компаниями **High Safety \(Россия\)**
+### Мы предлагаем установку анкерных линий, разработанных и произведённых компаниями **High Safety \(Россия\)**
 
-*Наша компания является дилерами компании HIGH SAFETY*
+***Наша компания является дилерами компании HIGH SAFETY***
 
 
 ` ` Анкерные устройства от компании **HIGH SAFETY** - производитель средств индивидуальной и коллективной защиты от падения с высоты **№1 в России.** 
