--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -21,10 +21,10 @@ submenu: true
 Разработаны собственным конструкторским отделом HIGH SAFETY. Производятся из антистатичных материалов, что позволяет применять их во взрывоопасной среде. Анкерные линии рассчитаны на количество пользователей от 1-го до 7-и, в зависимости от типа устройства, анкерные точки - от 1-го до 3-х. Ассортимент анкерных линий, столбов и точек HIGH SAFETY позволяет организовать страховочную систему на любой рабочей площадке. Все анкерные линии испытаны по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="ГОСТ EN TS 16415-2015.pdf" %}  <!--  bufer6.3.1.md  --> "Средства индивидуальной защиты от падения с высоты. 
 
 #### Анкерные устройства для использования более чем одним человеком одновременно.
-1. Анкерная линия ***GALEREYA*** \(Двухтросовая горизонтальная гибкая анкерная линия\)
-2. Анкерная линия **GORIZONT** \(Горизонтальная гибкая анкерная линия\)
-3. Анкерная линия **MOST** \(Горизонтальная жесткая анкерная линия\)
-4. Анкерная линия **VERTIKAL** \(Вертикальная жесткая анкерная линия\)
-5. Анкерная линия **PEREPRAVA** \(Горизонтальная гибкая анкерная линия\)
-6. **Анкерные столбы** \(Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.\)
+1. Анкерная линия __[GALEREYA]({% link 3.1_GALEREYA.md %})__ \(Двухтросовая горизонтальная гибкая анкерная линия\)
+2. Анкерная линия __[GORIZONT]({% link 3.2_GORIZONT.md %})__ \(Горизонтальная гибкая анкерная линия\)
+3. Анкерная линия __[MOST]({% link 3.3_MOST.md %})__ \(Горизонтальная жесткая анкерная линия\)
+4. Анкерная линия __[VERTIKAL]({% link 3.4_VERTIKAL.md %})__ \(Вертикальная жесткая анкерная линия\)
+5. Анкерная линия __[PEREPRAVA]({% link 3.5_PEREPRAVA.md %})__ \(Горизонтальная гибкая анкерная линия\)
+6. __[Анкерные столбы]({% link 3.6_anchor_posts.md %})__ \(Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.\)
 
