--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -28,3 +28,37 @@ submenu: true
 5. Анкерная линия __[PEREPRAVA]({% link 3.5_PEREPRAVA.md %})__ \(Горизонтальная гибкая анкерная линия\)
 6. __[Анкерные столбы]({% link 3.6_anchor_posts.md %})__ \(Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.\)
 
+### Анкерные линии для обеспечения безопасной работы на высоте.
+
+**Анкерные линии** – это индивидуальное спасательное средство при проведении высотной работы. Они являются компонентом основной системы безопасности. Состоят из закрепленного на опоре каната, стального троса или металлоконструкции, к которым могут быть присоединены остальные компоненты соединительной системы.
+
+**Установка анкерных линий** – важный момент при проведении высотных работ. Самые распространенные сферы их применения:  
+•	монтаж и сварка на значительной высоте;  
+•	обслуживание крупного производственного сооружения;  
+•	отделка или ремонт фасада высотного здания;  
+•	ремонт и установка кровли;  
+•	спуск в колодец и другие виды промышленного альпинизма.  
+
+### Разновидности анкерных линий.  
+**Анкерные линии** различаются по типу размещения несущей конструкции: они бывают вертикальными и горизонтальными. Есть еще гибкие и жесткие виды анкерных конструкций.  
+1.	**Гибкие линии** подразумевают использование стального троса в несущей части конструкции. Трос закрепляют анкерами. Его длина для вертикального и горизонтального закрепления должна составлять 10 или 12 метров соответственно. На несущий трос размещают привязи для работника. Дополняется система креплениями и амортизаторами.  
+2.	**Жесткие линии** оборудованы рельсом. Он может быть прямым или изогнутым, здесь все зависит от профиля поверхности, на которой будет крепиться страховочная система. По рельсу будут перемещаться страховочные тросы на креплениях, снабженные стопорами и элементами амортизации. 
+
+### Монтаж анкерных линий.  
+Если Вы планируете **монтаж анкерных линий,** то прежде всего нужно определиться с их комплектацией. Помимо несущих тросов или рельс и страховочных частей в анкерных линиях должны присутствовать монтажные крепежные элементы и другие дополнительные устройства.
+
+**При расчете анкерной линии необходимо учитывать:**  
+•	габариты сооружения, на котором будет проводиться работа;  
+•	количество задействованных работников;  
+•	возможность для работников свободно передвигаться;  
+•	особенности условий работы.
+
+
+
+#### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
+
+
+### ВАША БЕЗОПАСНОСТЬ - НАША РАБОТА!
+
+***Наша компания проводит комплексное обеспечения предприятий стационарными анкерными линиями: оценка рисков и проектирование, продажа комплектующих, установка (наличие СРО), периодическая проверка, гарантийное обслуживание.***
+
