--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -28,6 +28,8 @@ submenu: true
 5. Анкерная линия __[PEREPRAVA]({% link 3.5_PEREPRAVA.md %})__ \(Горизонтальная гибкая анкерная линия\)
 6. __[Анкерные столбы]({% link 3.6_anchor_posts.md %})__ \(Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.\)
 
+                                            #### ***ФОТО ГАЛЛЕРЕЯ***
+
 ### Анкерные линии для обеспечения безопасной работы на высоте.
 
 **Анкерные линии** – это индивидуальное спасательное средство при проведении высотной работы. Они являются компонентом основной системы безопасности. Состоят из закрепленного на опоре каната, стального троса или металлоконструкции, к которым могут быть присоединены остальные компоненты соединительной системы.
