--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -10,19 +10,19 @@ submenu: true
 {% include el-slider.html  nimg = "5" %}
 
 
-Наша компания является дилерами компании HIGH SAFETY
+### Наша компания является дилерами компании **HIGH SAFETY**
 
 
-Двухтросовая горизонтальная гибкая анкерная линия GALEREYA компании HIGH SAFETY служит для обеспечения безопасности работ на высоте на жд и авто цистернах, вагонах. Линия может быть установлена «под потолок» на любую высоту от рабочего места пользователя: к кровельным перекрытиям помещений, ангаров, цехов. 
-Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}     
+` ` Двухтросовая горизонтальная гибкая анкерная линия **GALEREYA** компании **HIGH SAFETY** служит для обеспечения безопасности работ на высоте на жд и авто цистернах, вагонах. Линия может быть установлена «под потолок» на любую высоту от рабочего места пользователя: к кровельным перекрытиям помещений, ангаров, цехов.   
+Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}    
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России   
  
-Преимущества системы
+#### Преимущества системы
 
 ***ФОТО***
 
 • Благодаря уникальной конструкции мобильной анкерной точки допускается любой угол отклонения пользователя от линии. 
-• До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ EN/TS 16415-2015. (ссылка на буфер № 6.3.1.)
+• До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %}. 
 • Установка под потолком на любой высоте от пользователя.
 • Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку Ex: IIC Ga T6). 
 Состав системы
