--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -21,11 +21,12 @@ submenu: true
 
 ***ФОТО***
 
-• Благодаря уникальной конструкции мобильной анкерной точки допускается любой угол отклонения пользователя от линии. 
-• До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %}. 
-• Установка под потолком на любой высоте от пользователя.
-• Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку Ex: IIC Ga T6). 
-Состав системы
+• Благодаря уникальной конструкции мобильной анкерной точки допускается любой угол отклонения пользователя от линии.   
+• До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %}.   
+• Установка под потолком на любой высоте от пользователя.  
+• Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку Ex: IIC Ga T6).   
+
+#### Состав системы
 
 ***ФОТО***
 
