--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -14,13 +14,13 @@ submenu: true
 
 
 ` ` Двухтросовая горизонтальная гибкая анкерная линия **GALEREYA** компании **HIGH SAFETY** служит для обеспечения безопасности работ на высоте на жд и авто цистернах, вагонах. Линия может быть установлена «под потолок» на любую высоту от рабочего места пользователя: к кровельным перекрытиям помещений, ангаров, цехов.   
+
 Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}    
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России   
  
 #### Преимущества системы
 
 ***ФОТО***
-
 • Благодаря уникальной конструкции мобильной анкерной точки допускается любой угол отклонения пользователя от линии.   
 • До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %}.   
 • Установка под потолком на любой высоте от пользователя.  
@@ -29,52 +29,44 @@ submenu: true
 #### Состав системы
 
 ***ФОТО***
-
-Мобильная анкерная точка (арт. FHL201)
-Мобильная анкерная точка оснащена 4-мя роликами, что позволяет ей беспрепятственно проходить через промежуточные точки анкерной линии. Благодаря специальной конструкции тележки допускается любой угол отклонения пользователя от вертикали при движении пользователя вдоль рабочей площадки без необходимости отсоединения анкерной точки от линии.  
+#### Мобильная анкерная точка (арт. FHL201)  
+Мобильная анкерная точка оснащена 4-мя роликами, что позволяет ей беспрепятственно проходить через промежуточные точки анкерной линии. Благодаря специальной конструкции тележки допускается любой угол отклонения пользователя от вертикали при движении пользователя вдоль рабочей площадки без необходимости отсоединения анкерной точки от линии.    
 Материал: нержавеющая сталь
 
 ***ФОТО***
-
-Амортизирующее устройство (арт. FHL205)
-Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.
+#### Амортизирующее устройство (арт. FHL205)  
+Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.  
 Материал: нержавеющая сталь
 
 ***ФОТО***
-
-Промежуточный структурный анкер (арт.FHL202)
-Служит в качестве направляющей стального троса, а также дополнительной анкерной точкой крепления. Устанавливается через каждые 12 метров. 
+#### Промежуточный структурный анкер (арт.FHL202)  
+Служит в качестве направляющей стального троса, а также дополнительной анкерной точкой крепления. Устанавливается через каждые 12 метров.   
 Материал: нержавеющая сталь
  
 ***ФОТО***
-
-Натяжитель для троса (арт. FHL206)
+#### Натяжитель для троса (арт. FHL206)  
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.
 Материал: нержавеющая сталь
  
 ***ФОТО***
-
-Ролик-натяжитель (арт. FHL203)
-Позволяет осуществлять установку троса без разрыва - единым участком, а также обеспечивает равномерное натяжение каждой стороны анкерной линии.
+#### Ролик-натяжитель (арт. FHL203)  
+Позволяет осуществлять установку троса без разрыва - единым участком, а также обеспечивает равномерное натяжение каждой стороны анкерной линии.  
 Материал: нержавеющая сталь, высоко прочный пластик
  
 ***ФОТО***
-
-Крайний структурный анкер, нерж.сталь (арт. FHL207)
-Применяется для монтажа линии к элементам постоянной конструкции. 
+#### Крайний структурный анкер, нерж.сталь (арт. FHL207)  
+Применяется для монтажа линии к элементам постоянной конструкции.   
 Материал: нержавеющая сталь
  
 ***ФОТО***
-
-Цанговый зажим (ZG002)
+#### Цанговый зажим (ZG002)  
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
  
 ***ФОТО***
-
-Трос анкерной линии (арт. SSR001)
+#### Трос анкерной линии (арт. SSR001)    
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
  
-***ФОТО***
+
 
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
 
