--- a/3.2_GORIZONT.md
+++ b/3.2_GORIZONT.md
@@ -8,3 +8,85 @@ submenu: true
 <div style="clear:both"></div>
 
 {% include el-slider.html  %}
+
+***ФОТО***
+
+### Наша компания является дилерами компании **HIGH SAFETY**
+
+
+Горизонтальная гибкая анкерная линия **GORIZONT** компании **HIGH SAFETY** - наиболее простое и доступное решение для организации безопасной работы на высоте на любых типах горизонтальных поверхностей (чистка крыш, кровельные работы) на уровне пояса или над головой. 
+
+Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}  
+Заключение МИНПРОМТОРГа {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России
+
+ 
+### Преимущества системы  
+***ФОТО***
+ 
+•	Установка анкерной линии при факторе падения 0, 1, 2;  
+•	До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %};  
+•	Возможен монтаж с любым шагом установки промежуточных анкеров (до 12 м). Доступны также готовые «пакетные решения»: 12, 24, 36, 48, 60, 72 и 84 метров линии;  
+•	Возможность самостоятельного монтажа на фермы, балки, опоры, кровли методом охвата или с помощью анкеров.   
+•	Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку: IIC Ga T6 (взрывозащита: IIC Ga T6).
+ 
+
+ 
+### Состав системы
+
+***ФОТО***
+#### Мобильная анкерная точка, гальв. сталь (FHL101)
+Обеспечивает беспрепятственное прохождение промежуточных анкерных точек анкерной линии без необходимости отсоединения троса.   
+Материал: гальв. сталь.
+
+***ФОТО***
+#### Промежуточный структурный анкер, нерж. сталь (FHL102)  
+•  Возможность свободного перемещения по всей длине анкерной линии.  
+•  Дополнительная точка опоры.  
+•  Возможность установки на стенах зданий, крышах и кровлях.  
+Материал: нержавеющая сталь.
+ 
+***ФОТО***  
+#### Концевой структурный анкер 1-точечный, нерж. сталь (FHL103)  
+Используется при установке линии на анкерные столбы.   
+Материал: нержавеющая сталь.
+ 
+***ФОТО***  
+#### Концевой структурный анкер 2-точечный, нерж. сталь (FHL104)  
+Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).  
+Материал: нержавеющая сталь.
+
+***ФОТО***  
+#### Амортизирующее устройство (FHL105)  
+Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса. 
+Материал: нержавеющая сталь
+
+***ФОТО***
+#### Натяжитель для троса (FHL106)  
+Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.   
+Материал: нержавеющая сталь
+
+***ФОТО***
+#### Промежуточный структурный анкер угловой (FHL107)  
+Угловой структурный анкер обеспечивает возможность монтажа анкерной линии при любой требуемой геометрии установки, а также обеспечивает беспрепятственное прохождение угловых участков мобильной анкерной точкой.   
+Материал: нержавеющая сталь
+
+***ФОТО***
+#### Цанговый зажим (ZG002)  
+Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
+ 
+***ФОТО***
+#### Трос из нержавеющей стали (SSR001)  
+Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
+
+
+### Упаковка анкерной линии  
+Готовое решение предусматривает подробную инструкцию по сборке системы, комплект эксплуатационных документов и гарантийный талон на анкерную линию.
+
+#### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
+
+
+### ВАША БЕЗОПАСНОСТЬ - НАША РАБОТА!
+
+***Наша компания проводит комплексное обеспечения предприятий стационарными анкерными линиями: оценка рисков и проектирование, продажа комплектующих, установка (наличие СРО), периодическая проверка, гарантийное обслуживание.***
+
+
