--- a/3.2_GORIZONT.md
+++ b/3.2_GORIZONT.md
@@ -17,7 +17,7 @@ submenu: true
 Горизонтальная гибкая анкерная линия **GORIZONT** компании **HIGH SAFETY** - наиболее простое и доступное решение для организации безопасной работы на высоте на любых типах горизонтальных поверхностей (чистка крыш, кровельные работы) на уровне пояса или над головой. 
 
 Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}  
-Заключение МИНПРОМТОРГа {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России
+{% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России
 
  
 ### Преимущества системы  
