--- a/3.3_MOST.md
+++ b/3.3_MOST.md
@@ -4,4 +4,70 @@ cat: 3
 sortid: 3.3
 submenu: true
 ---
+***ФОТО***  
+### Наша компания является дилерами компании **HIGH SAFETY**
+
+Горизонтальная жесткая анкерная линия **MOST** компании **HIGH SAFETY** - универсальное решение для всех видов работ: работа на автоцистернах и жд вагонах,- слив, налив, взятие проб, проведение замеров, работы на крыше, работы в положении сидя при обслуживании фасадов промышленных и городских зданий (торговых центров, жилых домов, бизнес-центров). 
+
+Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}
+{% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
+
+
+Преимущества системы
+
+***ФОТО***  
+• Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку Ex: IIC Ga T6 (взрывозащита: IIC Ga T6).
+• До 3-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ EN/TS 16415- 2015.
+• Возможность монтажа на любой высоте - над головой, на уровне плеч, на уровне ног.
+• Подходит для работы в безопорном пространстве (работы в висе/ положении сидя).
+• Исполнение в двух цветовых вариантах (серебристый; черный).
+• Система анодирована, что позволяет повысить ее прочность и продлить срок службы. 
+
+Состав системы
+
+***ФОТО***
+Мобильная анкерная точка (арт. RHL301)
+Имеет конструкцию, позволяющую использовать его совместно с различными типами карабинов - увеличенное кольцо для крепления. Корпус анкерной точки (тележки) может быть выполнен как в серебристом цвете, так и в золотом, что позволяет легко обозначить его в условиях плохой видимости.  Роликовые колеса тележки из капролона обеспечивают бесперепятсвенное движение тележки по всей длине линии. 
+Материал: алюминий. 
+ 
+***ФОТО***
+Сегмент анкерной направляющей (арт. RHL302)
+Сегмент анкерной направляющей имеет длину 1, 2 или 3 м. Благодаря этому возможна установка на любую длину и геометрию. 
+Может быть выполнен в серебристом или черном цвете, благодаря чему органично вписывается в оформление современных фасадов зданий. 
+Материал: алюминий.
+ 
+***ФОТО***
+Соединитель сегментов (арт. RHL303)
+Предназначен для соединения рельсовых сегментов жесткой анкерной линии. Устанавливается на стыке сегментов для надежного соединения участков линии. 
+Материал: алюминий. 
+ 
+***ФОТО***
+Концевой ограничитель (арт. RHL304)
+Концевой ограничитель устанавливается по краям линии (по одному с каждого конца). Предназначен для предотвращения случайного соскальзывания мобильной анкерной точки (тележки) с рельсовго сегмента. Может быть выполнен в серебристом или золотом цвете. 
+Материал: алюминий. 
+ 
+***ФОТО***
+Держатель сегментов (арт. RHL305)
+Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов). Предназначен для крепления анкерной линии к элементам постоянной конструкции. 
+Материал: алюминий.
+ 
+***ФОТО***
+Структурный анкер с крепление одним болтом/ двумя болтами (арт. RHL 306/RHL307)
+Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов). Предназначен для крепления анкерной линии к элементам постоянной конструкции. 
+Материал: нержавеющая сталь.
+ 
+***ФОТО***
+Шкант для соединения сегментов (арт. RHL308)
+Используется при соединении рельсовых сегментов на стыке участков. 
+Материал: нержавеющая сталь.
+
+
+#### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
+
+
+### ВАША БЕЗОПАСНОСТЬ - НАША РАБОТА!
+
+***Наша компания проводит комплексное обеспечения предприятий стационарными анкерными линиями: оценка рисков и проектирование, продажа комплектующих, установка (наличие СРО), периодическая проверка, гарантийное обслуживание.***
+
+
 
