--- a/3.5_PEREPRAVA.md
+++ b/3.5_PEREPRAVA.md
@@ -5,3 +5,88 @@ sortid: 3.5
 submenu: true
 ---
 
+
+***ФОТО***
+
+### Наша компания является дилерами компании **HIGH SAFETY**
+
+
+Горизонтальная гибкая анкерная линия **PEREPRAVA** компании **HIGH SAFETY** - универсальное решение для организации безопасной работы на высоте на горизонтальных поверхностях (монтаж к стене или под потолок). Может быть установлена на любой высоте (фактор падения 0). Незаменима при организации страховочной системы на подкрановых путях. 
+
+Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}
+{% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
+ 
+
+Преимущества системы  
+***ФОТО***
+
+•	До 7-и одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %};
+•	Установка анкерной линии на любой высоте при факторе падения 0;
+•	Совместима с любыми типами СИЗ втягивающего типа;
+•	Отклонение от вертикали 300;
+•	Возможность самостоятельного монтажа на фермы, балки, опоры, кровли методом охвата или с помощью анкеров. 
+•	Мобильная анкерная точка с роликовым механизмом, позволяющим беспрепятсвенно передвигаться вдоль линии. 
+•	Мобильная анкерная точка (тележка) оснащена механизмом, предотвращающим несанкционированное снятие (демонтаж при помощи специального ключа). 
+•	Оснащена дополнительной резервирующей петлей, гарантирующей безопасную эксплуатацию системы в случае некорректной установки цангового зажима. 
+•	Все компоненты линии изготовлены из нержавеющей стали. 
+•	Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах. Все компоненты линии имеют маркировку: IIC Ga T6 (взрывозащита: IIC Ga T6). Подтверждено сертификатом № СДС.ТП.ДСП.020014-19.
+
+Состав системы
+
+***ФОТО***
+Мобильная анкерная точка, нерж. сталь (FHL401)
+Обеспечивает беспрепятственное прохождение промежуточных точек анкерной линии на любой высоте установки при факторе падения 0. Совместима с любыми типами СИЗ втягивающего типа.  
+Материал: нержавеющая сталь.
+
+***ФОТО***
+***ФОТО***
+Промежуточный структурный анкер, нерж. сталь (FHL402 )
+•  Возможность свободного перемещения по всей длине анкерной линии.
+•  Дополнительная точка опоры.
+•  Возможность установки на стенах зданий или под потолок.
+Материал: нержавеющая сталь.
+
+***ФОТО***
+Концевой структурный анкер 1-точечный, нерж. сталь (FHL403)
+Используется при установке линии на анкерные столбы. 
+Материал: нержавеющая сталь.
+ 
+***ФОТО***
+Концевой структурный анкер 2-точечный, нерж. сталь (FHL404)
+Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).
+Материал: нержавеющая сталь.
+ 
+***ФОТО***
+Амортизирующее устройство (FHL405)
+Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса. 
+Материал: нержавеющая сталь
+ 
+***ФОТО***
+Натяжитель для троса (FHL406)
+Натяжитель для троса позволяет легко натянуть трос до требуемого уровня. 
+Материал: нержавеющая сталь
+ 
+***ФОТО***
+Промежуточный структурный анкер угловой (FHL407)
+Угловой структурный анкер обеспечивает возможность монтажа анкерной линии при любой требуемой геометрии установки, а также обеспечивает беспрепятственное прохождение угловых участков мобильной анкерной точкой. 
+Материал: нержавеющая сталь
+ 
+***ФОТО***
+Цанговый зажим (ZG002)
+Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
+ 
+***ФОТО*** 
+Трос из нержавеющей стали (SSR001)
+Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
+ 
+ Упаковка анкерной линии
+Готовое решение предусматривает подробную инструкцию по сборке системы, комплект эксплуатационных документов и гарантийный талон на анкерную линию.
+
+
+#### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
+
+
+### ВАША БЕЗОПАСНОСТЬ - НАША РАБОТА!
+
+***Наша компания проводит комплексное обеспечения предприятий стационарными анкерными линиями: оценка рисков и проектирование, продажа комплектующих, установка (наличие СРО), периодическая проверка, гарантийное обслуживание.***
+
