--- a/3.6_anchor_posts.md
+++ b/3.6_anchor_posts.md
@@ -5,3 +5,106 @@ sortid: 3.6
 submenu: true
 ---
 
+### Наша компания является дилерами компании **HIGH SAFETY**
+
+**HIGH SAFETY** предлагает широкий ассортимент анкерных столбов, используемых как в качестве самостоятельных анкерных точек, так и для монтажа на них горизонтальных анкерных линий.  
+По желанию заказчика возможно исполнение изделия с любым покрытием: горячее цинкование, гальваника, покраска эмалью, порошковая покраска. 
+
+Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}  
+{% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
+
+
+***ФОТО***  
+` ` Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка (входит в комплект поставки) для присоединения средств индивидуальной защиты от падения с высоты.  Для столба высотой 0,8 м - 1 м  дополнительно предусмотрены ребра жесткости в основании устройства.   
+ 
+#### Характеристики:
+Материал: гальванизированная сталь  
+Высота столба: 0,2 м/ 0,4 м/ 0,8 м/ 1 м  
+Количество пользователей: 2  
+Статическая прочность: мин. 24 кН  
+ 
+ 
+ 
+#### Анкерный столб, боковое крепление (арт. AP-4h)  
+***ФОТО***
+
+` ` Представляет собой анкерное устройство класса B и предназначен для монтажа охватом на несущие балки конструкции (например, подкровельные).     
+#### Характеристики:  
+Материал: гальванизированная сталь с полимерным покрытием  
+Высота столба: 0,2 м/ 0,4 м/ 0,8 м/ 1 м  
+Количество пользователей: 2  
+Статическая прочность: 24 кН  
+Размер балки: высота 120 - 780 мм, ширина - до 300 мм
+ 
+ 
+#### Анкерный столб, многогранный (арт. AP-8h)  
+***ФОТО***
+
+` ` Представляет собой анкерное устройство класса А и предназначен для организации анкерной точки на элементах постоянных конструкций: стальных - установка при помощи болтовых элементов М12, бетонных - при помощи химических/механических анкеров. Монтаж на балки осуществляется при помощи ответной пластины и шпилек.       
+#### Характеристики:  
+Материал: нержавеющая сталь  
+Количество пользователей: 2  
+Статическая прочность: 24 кН  
+ 
+ 
+#### Анкерный столб "ТИТАН 200" (арт. AP-T200)  
+***ФОТО***
+
+` ` Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.  Монтируется как на бетонные, так и стальные поверхности.     
+#### Характеристики:  
+Материал: титан  
+Высота столба: 2 м  
+Количество пользователей: 1  
+Статическая прочность: мин. 24 кН
+ 
+ 
+#### Анкерный столб "ТИТАН 200 b" (арт. AP-T200b)
+***ФОТО***
+
+` ` Представляет собой анкерное устройство класса B и предназначен для монтажа на опоры любого сечения с размерами одной из сторон не более 600 мм.       
+#### Характеристики:  
+Материал столба: титан  
+Материал базы: сталь  
+Высота столба: 2 м  
+Количество пользователей: 1 (при использовании в комплекте для разъединителей с гибкой анкерной линией - 2)  
+Статическая прочность: мин. 24 кН
+ 
+ 
+#### Анкерный столб AP-S200 (арт. AP-S200)
+***ФОТО***
+
+` ` Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.  Монтируется как на бетонные, так и стальные поверхности.      
+#### Характеристики:  
+Материал: оцинкованная сталь  
+Высота столба: 2 м  
+Количество пользователей: 2  
+Статическая прочность: мин. 24 кН  
+ 
+ 
+#### Анкерный столб AP-S200b (арт. AP-S200b)
+***ФОТО***
+
+` ` Представляет собой анкерное устройство класса B и предназначен для монтажа на опоры любого сечения с размерами одной из сторон не более 600 мм.        
+#### Характеристики:  
+Материал: оцинкованная сталь  
+Высота столба: 2 м  
+Количество пользователей: 2  
+Статическая прочность: мин. 24 кН  
+ 
+ 
+#### Анкерный столб для кровли (арт. AP-R10)
+***ФОТО***
+
+` ` Представляет собой анкерное устройство класса A и предназначен для монтажа на мягкие кровли (сэндвич-панель, профлист и т.д.). Крепление к поверхности осуществляется при помощи саморезов.   
+#### Характеристики:  
+Материал: нержавеющая сталь  
+Количество пользователей: 2  
+Статическая прочность: мин. 24 кН  
+ 
+ 
+#### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
+
+
+### ВАША БЕЗОПАСНОСТЬ - НАША РАБОТА!
+
+***Наша компания проводит комплексное обеспечения предприятий стационарными анкерными линиями: оценка рисков и проектирование, продажа комплектующих, установка (наличие СРО), периодическая проверка, гарантийное обслуживание.***
