--- a/3.6_anchor_posts.md
+++ b/3.6_anchor_posts.md
@@ -15,9 +15,10 @@ submenu: true
 
 
 ***ФОТО***  
+
 ` ` Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка (входит в комплект поставки) для присоединения средств индивидуальной защиты от падения с высоты.  Для столба высотой 0,8 м - 1 м  дополнительно предусмотрены ребра жесткости в основании устройства.   
  
-#### Характеристики:
+` ` **Характеристики:**
 Материал: гальванизированная сталь  
 Высота столба: 0,2 м/ 0,4 м/ 0,8 м/ 1 м  
 Количество пользователей: 2  
@@ -25,7 +26,7 @@ submenu: true
  
  
  
-#### Анкерный столб, боковое крепление (арт. AP-4h)  
+#### **Анкерный столб, боковое крепление** (арт. AP-4h)  
 ***ФОТО***
 
 ` ` Представляет собой анкерное устройство класса B и предназначен для монтажа охватом на несущие балки конструкции (например, подкровельные).     
